# bank_widget

./: .flake8  .gitignore  README.md  pyproject.toml
src/: .flake8.txt  masks.py  processing.py  widget.py
tests/: test.py  test_masks.py  test_processing.py  test_widget.py
