[tool.poetry]
name = "bank_widget"
version = "0.1.0"
description = "Bank widget for masking cards and accounts"
authors = ["Your Name <savrohov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true