[tool.poetry]
name = "bank_widget"
version = "0.1.0"
description = "Bank widget for masking cards and accounts"
authors = ["Your Name <savrohov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"


[tool.poetry.group.lint.dependencies]
isort = "^8.0.1"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true